# hplll

./: INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure.ac  index.html
V0/: configure.ac
V0/drafts/: Makefile.in
V0/examples/: make_ex
V0/macros/: Makefile.in  ntl-check.m4
V0/src/: block.h  decompz.cc  defs.h  givtimer.h  hlll-save-avant-preduce.cc  hlllg.h  isreduced.cc  lehmersstrunc.cc  matmixed.h  slll.cc  (+2 more)
drafts/: main.cc
examples/: alpha.in  gcd.cc  gen.cc  make_ex  relation.cc
fpbench/: Makefile.am  fpbench.cc  fpbench.h  matbench.cc  matbench.h  nr_FP_float128.inl
hplll/: AUTHORS  configure.ac
hplll-0.1.1/: Makefile  Makefile.am  Makefile.in  TODO  TODOLEHMER  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  libtool
hplll-0.1.1/AUTRE/: A  Makefile  dyn.cc  main.cc  t20.in  t8.in
hplll-0.1.1/NO_DIST/Avec-W-et-Wf-5avril2013/: decomp.cc
hplll-0.1.1/SAVE/: hlll-save-16juillet13.h  hlll-save-22juillet13.cc  hlll-save-25juillet13.cc  hlll-save-25juillet13.h  hlll-save-27aout13.cc  hlll-save-27aout13.h  hlll-save-8juillet13.cc  hlllseysensave.cc
hplll-0.1.1/autom4te.cache/: output.1  output.2  output.3  output.6  requests  traces.0  traces.3  traces.4  traces.6  traces.8  traces.9
hplll-0.1.1/drafts/: Makefile.am  Makefile.in  basicomp.cc  bruno_small_ex.mpl  ideal.h  in158  in178  in98  issac-pkc.cc  main-fplll-hlll.cc  main-gmplong.cc  main-hlllp.cc  main-partial.cc  main-pkc.cc  main-plll.cc  main-prodmat.cc  main-slll.cc  main-sllld.cc  main-wrap.cc  main.cc  main3d.cc  main410.cc  mainblock.cc  mainbruno2.cc  mainhuge.cc  mainhugewrapper.cc  mainideal.cc  mainl1.cc  mainlehmer.cc  mainlift.cc  mainntl.cc  mainomp.cc  mainpmatprod.cc  mainq.cc  maintestl1.cc  mainwrapperfraise.cc  p120.in  pb410  pb410-all  shi-512_log  (+1 more)
hplll-0.1.1/drafts/.deps/: main.Po
hplll-0.1.1/drafts/resultats/: fpal  fplllal.results  hpal  hpal.cc  hpal.results  main  ttt
hplll-0.1.1/examples/: Makefile.am  Makefile.in  gcd.cc  gen.cc  make_ex
hplll-0.1.1/fhe-code/: Makefile  fhe-dec.cc  fhe-enc.cc  fhe-keygen.cc  fhe-recrypt.cc  fhe-utils.cc  fhe.h  mkflags  randomStuff.cc  randomStuff.h  test-recrypt.cc
hplll-0.1.1/ideal-generator/: Makefile  Makefile.save  ideal.cc
hplll-0.1.1/macros/: Makefile  Makefile.am  Makefile.in  fplll-check.m4  ntl-check.m4
hplll-0.1.1/src/: Makefile.am  Makefile.in  block.h  decomp.cc  decomp.h  decompz.cc  decompz.h  defs.h  givtimer.h  hlll.cc  hlll.h  hlllg.cc  hplll.cc  hplll.h  ldpe.h  lehmer.cc  lehmersstrunc.cc  lift.cc  mat.h  matgen.cc  matgen.h  matmixed.h  matpe.h  matpeomp.h  mixed-col.h  nr-ld.cpp  nr_Z_l128.h  nullspace.cc  nullspace.h  oldslll.cc  oldslll.h  plll.cc  plll.h  ratio.h  relations.cc  relations.h  slll-wrap.h  slll.cc  slll.h  sllld.cc  (+2 more)
hplll-0.1.1/src/.deps/: decomp.Tpo  hlll.Plo  nullspace.Plo
hplll-0.1.1/stats/: Makefile  gen.cc  ratio  ratio.cc  ratio.h
hplll-0.1.1/svp-generator/: Makefile  chlg  chlg.cc  generate_random  generate_random.cc  readme.txt  tools.h
hplll-0.1.1/tests/: 2_in  416_in  C5_out  C6_out  C7_out  Makefile.am  Makefile.in  arithmetic.cc  basicomp.cc  fhn_acyclic.cc  fhn_ajtai.cc  fhn_al.cc  fhn_ideal.cc  fhn_latticec.cc  fhn_table_knapsack.cc  gen_table_ajtai.cc  gen_table_knapsack.cc  gentable1.cc  gentable2.cc  gentable3.cc  gentable4.cc  gentable5.cc  gentable6.cc  hllltest.cc  hop  hopU  hopblock  hopcond  hoppkc  issac-U.cc  issac-ajtai.cc  issac-block.cc  issac-pkc.cc  main-fplll-hlll.cc  main-plll.cc  main-slll.cc  main.cc  mainbruno.cc  mainchrono.cc  mainfphjlsnullspace.cc  (+24 more)
hplll-0.1.1/tests/collection/ideal/: README.txt
hplll-0.1.1/tests/collection/latticec/: challenge-1000  challenge-1100  challenge-1200  challenge-1300  challenge-450  challenge-650  challenge-800  challenge-900
hplll-0.1.2/: MYTODO  Makefile.in  README  configure.ac
hplll/drafts/: Makefile.in
hplll/src/: decomp.cc  decomp.h  defs.h  givtimer.C  mat.h  matpe.h  slll-wrap.h  tmp.cc
hplll/src/.deps/: hlll.Tpo  relations.Plo
hplll/tests/: r128int  relationstest.cc
hplll/tests/collection/latticec/: challenge-1000  challenge-1100
macros/: Makefile  ntl-check.m4
src/: Makefile.am  block.h  decomp.cc  decompz.cc  hlll.cc  hlll.h  hplll.h  isreduced.cc  l1.h  lift.cc  mat.h  matgen.cc  matpe.h  nr_Z_l128.h  oldslll.cc  plll.cc  ratio.h  relations.cc  relations.h  relations_f.cc  relations_f.h  relations_z.cc  relations_z.h  slll-wrap.h  slll.cc  slll.h  tmp.cc  wrappers.h
stats/: gen.cc
tests/: Makefile.am  Makefile.in  fhn_acyclic.cc  fhn_ajtai.cc  fhn_al.cc  fhn_latticec.cc  fhn_ntru.cc  fhn_ntrul.cc  fhn_table_knapsack.cc  gen_table_knapsack.cc  hllltest.cc  relationstest.cc  relationstesthuge.cc
tests/benchmarks_results/: Makefile.am
tests/collection/latticec/: README.txt  challenge-1200
tests/collection/ntru/: ntru_120_80.txt  ntru_160_107.txt  ntru_180_120.txt  ntru_200_133.txt  ntru_220_147.txt  ntru_240_160.txt  ntru_80_53.txt
tests/collection/ntrul/: ntrul_140.txt  ntrul_181.txt  ntrul_200.txt  ntrul_227.txt  ntrul_240.txt  ntrul_280.txt  ntrul_317.txt  ntrul_320.txt  ntrul_360.txt  ntrul_400.txt  ntrul_421.txt  ntrul_440.txt  ntrul_480.txt  ntrul_520.txt  ntrul_523.txt  ntrul_560.txt  ntrul_600.txt  ntrul_613.txt  ntrul_80.txt
tests/collection/relations/: README.txt  poisson_13_1_1.txt  poisson_17_1_1.txt  poisson_19_1_1.txt  poisson_21_1_1.txt  poisson_21_1_2.txt  poisson_23_1_1.txt  poisson_27_1_1.txt  poisson_29_1_1.txt  rs_10_10.txt  rs_7_7.txt  rs_9_9.txt
trunk/: CHANGES-WITH-RESPECT-TO-L1  Makefile  Makefile.am  Makefile.in  config.status  libtool
trunk/hplll-0.1.1/src/: Makefile  Makefile.am  Makefile.in  decompz.h  defs.h  hlll.cc  hlll.h  mat.h  nr-ld.cpp  relations.cc  relations.h
trunk/hplll-0.1.1/src/.deps/: decompz.Plo  hlll.Plo  nullspace.Plo
trunk/tests/: C2_out  C4_out  C7_out  Makefile  Makefile.am  arithmetic  hllltest  main  nullspacetest  nullspacetest.cc  relationstest  relationstest.cc
trunk/tests/.deps/: arithmetic.Po  hllltest.Po  main.Po  nullspacetest.Po  relationstest.Po
(+166 files in other folders)
